--- a/low_mach.tex
+++ b/low_mach.tex
@@ -786,7 +786,7 @@ In this section, we briefly describe the spatial and temporal techniques used to
 \label{eq:form}
 \partial_t \mathbf{U} + \div \vec{\mathbf{F}}\left( \mathbf{U} \right) = \mathbf{S} + \div \mathbf{D}(\mathbf{U}) \grad \mathbf{U}
 \end{equation}
-where $\mathbf{U}=[\rho A,\, \rho A \vec{u},\, \rho A E]^T$ is the solution vector, $\mathbf{F}$ denotes the inviscid flux 
+where $\mathbf{U}=[\rho A,\, \rho \vec{u} A,\, \rho E A]^T$ is the solution vector, $\mathbf{F}$ denotes the inviscid flux 
 \begin{equation}
   \vec{\mathbf{F}} \equiv
   \begin{bmatrix}
@@ -836,14 +836,14 @@ Our implementation of the subsonic boundary conditions is inspired of the method
 
 \tcr{say a bit more, give 1-2 sentences to describe how to impose subsonic/supersonic inlet/outlet BCs}. \tcb{Is it enough?}
 
-For each numerical solution presented in \sct{sec:results}, the type of boundary conditions used will be specified and taken amping the followings: supersonic inlet, subsonic inlet (stagnation pressure boundary) and supersonic outlet. 
+For each numerical solution presented in \sct{sec:results}, the type of boundary conditions used will be specified and taken \tcr{???}amping\tcr{???} the followings: supersonic inlet, subsonic inlet (stagnation pressure boundary) and supersonic outlet. 
 %and subsonic inlet \tcr{???} (static pressure boundary). \\
 The artificial diffusion coefficient $D(U)$ is set to zero at the boundary of the computational domain so that the boundary term $\int_{\partial \Omega} D(U) \grad U \cdot \vec{n} \phi$ stemming from the integration by parts of the artificial dissipative terms in \eqt{eq:cfem} is ignored.
 
 %---------------------------------------------------------------------------------------------------
 \subsection{Solver} \label{sec:solver}
 %---------------------------------------------------------------------------------------------------
-A Jacobian-free-Newton-Krylov (JFNK) method is used to solve for the solution at the end of each time step. An approximate Jacobian matrix of the discretized equations was derived and implemented. Obtaining the matrix entries requires that the partial derivatives of pressure with respect to the conservative variables be known (this step is easily done for the Stiffened and Ideal Gas equations of state). The contributions of the artificial dissipative terms to the Jacobian matrix are approximated by lagging the viscosity coefficients (computing them with the previous solution). For instance, this is shown in \eqt{eq:jac_diss_term} for the dissipative terms present in the continuity equation:
+A Jacobian-free-Newton-Krylov (JFNK) method is used to solve for the solution at the end of each time step. An approximate Jacobian matrix of the discretized equations was derived and implemented. Obtaining the matrix entries requires that the partial derivatives of pressure with respect to the conservative variables be known (this is relatively simple for the Stiffened and Ideal Gas equations of state but may be more complex for general equations of state). The contributions of the artificial dissipative terms to the Jacobian matrix are approximated by lagging the viscosity coefficients (computing them with the previous solution). For instance, this is shown in \eqt{eq:jac_diss_term} for the dissipative terms present in the continuity equation:
 \begin{equation}
 \label{eq:jac_diss_term}
 \frac{\partial}{\partial U} \left( \kappa \div \rho \grad \phi \right) \simeq \kappa \div \frac{\partial \rho}{\partial U} \grad \phi ,
@@ -857,16 +857,15 @@ where $U$ denotes any of the conservative variables (in the above, we have negle
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 1-D and 2-D Numerical solutions for the Euler equations with viscous regularization using the entropy viscosity method are presented here.
-Our results validate the chosen definitions for the viscosity coefficients in the low-Mach limit and verify that the new definitions still resolve shocks appropriately. 
+Our results validate the chosen definitions for the viscosity coefficients in the low-Mach limit and verify that the new definitions resolve shocks appropriately. 
 
-
-The first set of 1-D simulations consist of liquid water and steam flowing in a convergent-divergent nozzle. This test is of interest for multiple reasons: (a) a steady state can be reached (some stabilization methods are known to have difficulties reaching a steady state, \cite{FluxLimiter, FluxLimiter2}), (b) an analytical solution is available and a space-time convergence study can be performed, (c) it can be performed for liquid and gas phases, the gas phase simulation presents a shocks while the liquid-phase simulation has a significantly low Mach number.
+The first set of 1-D simulations consist of liquid water and steam flowing in a convergent-divergent nozzle. This test is of interest for multiple reasons: (a) a steady state can be reached (some stabilization methods are known to have difficulties reaching a steady state, \cite{FluxLimiter, FluxLimiter2}), (b) an analytical solution is available and a space-time convergence study can be performed, (c) it can be performed for liquid and gas phases, the gas phase simulation presents a shocks while the liquid-phase simulation has a significantly lower Mach number.
 %
-Next, a 1-D shock tube test (in a straight pipe) taking from the Leblanc test-case suite \cite{Leblanc} is also performed and consists of a flow developing shocks. This test is known to be more challenging than Sod shock tubes and the fluid's Mach number varies spatially between 0 and 5. A convergence study is also performed in order to demonstrate convergence of the numerical solution to the exact solution. 
+Next, a 1-D shock tube test (in a straight pipe) taking from the Leblanc test-case suite \cite{Leblanc} is performed. This test is known to be more challenging than Sod shock tubes and the fluid's Mach number varies spatially between 0 and 5. A convergence study is also performed in order to demonstrate convergence of the numerical solution to the exact solution. 
 %
 A slow moving shock is also investigated \cite{james}. This test helps in assessing the ability of the method at damping the post-shock low frequency noise. 
 %
-Finally, a strong shock for a liquid phase is also investigated. 
+Finally, a strong shock for a liquid phase is also investigated. \tcr{need ref for this}
 
 The initial conditions (density in $kg.m^{-3}$, velocity in $m.s^{-1}$, pressure in $Pa$) for the last three 1-D shock tubes are given in \tbl{tbl:ic_1d_tests}.
 \begin{table}[!htbp]
@@ -885,21 +884,23 @@ $1$ & $-0.81$ & $1$ & $3.86$ & $-3.44$ & $10.33$                                
 \caption{\label{tbl:ic_1d_tests} Initial conditions for the 1-D shock tube tests.}
 \end{table} 
 
-2-D simulations presented are discussed next. 
+2-D simulations are presented next. 
 First, subsonic flows of around a 2-D cylinder \cite{LowMach3} and over a Gaussian hump \cite{Hump} are presented for various far-field Mach numbers (as low of $10^{-7}$). Numerical results of a transonic flow in a compression corner are provided to illustrate the ability of the new viscosity definitions to handle supersonic flows. Convergence studies are performed when analytical solutions are available. 
 
-For each simulation, data relative to the boundary conditions, the Courant-Friedrichs-Lewy number ($CFL$), mesh and equation of state will be provided. All of the numerical solution presented are obtained using BDF2 as temporal integrator and linear (1D), $\mathbb{P}_1$ (2D triangular mesh), $\mathbb{Q}_1$ (2D quadrangular mesh) finite elements. The integrals are numerically computed using a second-order Gauss quadrature rule. The steady-state solution is detected by monitoring the norm of the total residual (including all of the equations) and reached when the norm of the total residual is below $10^{-6}$. The ideal gas \cite{IGEOS} or stiffened gas equations of state \cite{SGEOS} are used; a generic expression is given in \eqt{eq:eos}.
+For each simulation, data relative to the boundary conditions, the Courant-Friedrichs-Lewy number ($CFL$), mesh and equation of state are provided. All of the numerical solution presented are obtained using BDF2 as temporal integrator and linear (1-D mesh), $\mathbb{P}_1$ (2-D triangular mesh), $\mathbb{Q}_1$ (2-D quadrangular mesh) finite elements. The integrals are numerically computed using a second-order Gauss quadrature rule. The steady-state solution is detected by monitoring the norm of the total residual (including all of the equations) and reached when the norm of the total residual is below $10^{-6}$. The ideal gas \cite{IGEOS} or stiffened gas equations of state \cite{SGEOS} are used; a generic expression is given in \eqt{eq:eos}.
 %
 \begin{equation}
 \label{eq:eos}
 P = (\gamma-1) \rho (e-q) - \gamma P_\infty
 \end{equation}
 %
-where the parameters $q$ and $P_\infty$ are fluid-dependent. The values we employed are given in \tbl{tbl:stff_gas_eos}. The ideal gas equation of state is recovered by setting $q=P_\infty=0$ in \eqt{eq:eos}. 
+where the parameters $q$ and $P_\infty$ are fluid-dependent and are given in \tbl{tbl:stff_gas_eos}. The ideal gas equation of state is recovered by setting $q=P_\infty=0$ in \eqt{eq:eos}. 
 %
 \begin{table}[!htbp]
+
 \begin{center}
-\caption{\label{tbl:stff_gas_eos} Stiffened Gas Equation of State parameters for steam and liquid wate.}
+\caption{ Stiffened Gas Equation of State parameters for steam and liquid water.}
+\label{tbl:stff_gas_eos}
 \begin{tabular}{|c|c|c|c|c|}
  \hline
 \text{fluid}                           & $\gamma$ & $C_v$ $(J.kg^{-1}.K^{-1})$ & $P_\infty$ $(Pa)$ & $q$ $(J.kg^{-1})$ \\  \hline \hline
@@ -916,11 +917,13 @@ The entropy function for the stiffened gas equation of state is convex and given
 s = C_v \ln \left( \frac{P+P_\infty}{\rho^{\gamma-1}} \right) ,
 \end{equation*}
 where $C_v$ is the heat capacity at constant volume. \\
-Lastly, the convergence rates are computed using the following relations 
-\begin{equation}\label{eq:conv_rates}
-rate = \ln \left( \frac{|| \cdot ||_{2h}-|| \cdot ||_h}{|| \cdot ||_h-|| \cdot ||_{\frac{h}{2}}} \right) / \ln 2
+
+Finally, the convergence rates are computed using the following relation 
+\begin{equation}
+\label{eq:conv_rates}
+rate_h = \ln \left( \frac{|| U_{2h}-U_{\text{exact}} || - || U_{h}-U_{\text{exact}} ||}{|| U_{h}-U_{\text{exact}} ||_h - || U_{h/2}-U_{\text{exact}} || } \right) / \ln 2
 \end{equation}
-where $|| \cdot ||$ denotes either the $L1$ or $L2$ error norms, and $h$ is the grid size.
+where $|| \cdot ||$ denotes either the L$_1$ or L$_2$ norms and $h$ is the grid size.
 
 %---------------------------------------------------------------------------------------------------
 \subsection{Liquid water in a 1-D convergent-divergent nozzle} \label{sec:liquid_nozzle}
@@ -960,13 +963,13 @@ Plots of the Mach number, density, and pressure are given at steady-state in \fi
                 \caption{Viscosity coefficients}
                 \label{fig:1d_nozzle_liq_visc}
         \end{subfigure}
-        \caption{Steady-state solution for a liquid flow through a 1-D convergent-divergent nozzle.}\label{fig:1d_liq_nozzle}
+        \caption{Steady-state solution for a liquid flowing through a 1-D convergent-divergent nozzle.}\label{fig:1d_liq_nozzle}
 \end{figure}
 %
 In \fig{fig:1d_liq_nozzle}, the numerical solutions obtained using the first-order viscosity (FOV) and the entropy viscosity method (EVM) are plotted against the exact solution. The numerical solution obtained with the EVM and the exact solution overlap, even for fairly coarse mesh (50 cells).
 On the other hand, the numerical solution obtained with the FOV does not give the correct steady state: this is an illustration of the effect of ill-scaled dissipative terms. 
 %
-Note that the entropy viscosity coefficient is very small compared to the first-order one (\fig{fig:1d_nozzle_liq_visc}): (i) the numerical solution is smooth as shown in \fig{fig:1d_liq_nozzle} and (ii) the flow is in a low Mach regime and thus isentropic . A convergence study was performed using the exact solution as a reference: the L$_1$ and L$_2$ norms of the error and the corresponding convergence rates are computed at steady state on various uniform mesh from 4 to 256 cells.
+Note that the entropy viscosity coefficient is very small compared to the first-order one (\fig{fig:1d_nozzle_liq_visc}): (i) the numerical solution is smooth as shown in \fig{fig:1d_liq_nozzle} and (ii) the flow is in a low-Mach regime and thus isentropic . A convergence study was performed using the exact solution as a reference: the L$_1$ and L$_2$ norms of the error and the corresponding convergence rates are computed at steady state on various uniform mesh from 4 to 256 cells.
 Spatial convergence results using linear finite elements are reported in \tbl{tbl:l1_norm_liq} and \tbl{tbl:l2_norm_liq} for the primitive variables: density, velocity and pressure.
 %
 \begin{table}[H]
@@ -988,34 +991,6 @@ cells & density         & rate   & pressure        & rate    & velocity         
 \end{center}
 \end{table}
 %
-\tcb{I did 
-\begin{equation}
-c = \frac{P_1}{P_2}
-\end{equation}
-Valentin did the same thing in his paper.
-}
-\tcr{In \tbl{tbl:l1_norm_liq}, I cannot get your rate values. For example, set
-\begin{eqnarray*}
-P_1 &=& 8.4471 \times 10^{2} \\
-P_2 &=& 1.9839 \times 10^{2} \\
-P_3 &=& 4.6622 \times 10^{1} \\
-\end{eqnarray*}
-then the convergence order can be estimated as
-\[
-c = \frac{P_2-P_1}{P_3-P_2} = \frac{((1/2)^q-1)h^q}{((1/2)^q-1)(h/2)^q}=2^q
-\]
-thus
-\[
-q = \frac{\log{c}}{\log{2}}
-\]
-Here, $c= 4.2586052395762$ and $q=2.0903810024167$. Since the last two pressure rate values in your table are identical, 2.0478, maybe it is a copy/paste mistake. So, let's try again with other pressure values:
-\begin{eqnarray*}
-P_1 &=& 3.7938 \times 10^{3} \\
-P_2 &=& 8.4471 \times 10^{2} \\
-P_3 &=& 1.9839 \times 10^{2} \\
-\end{eqnarray*}
-Now, $c= 4.56289454140364$ and $q=2.18994931029196$. What is happening?
-}
 %
 \begin{table}[H]
 \begin{center}
@@ -1073,11 +1048,11 @@ The pressure difference between the inlet and outlet is large enough to accelera
                 \caption{Viscosity coefficients}
                 \label{fig:1d_nozzle_vap_visc}
         \end{subfigure}
-        \caption{Steady-state solution for vapor phase in the 1-D convergent-divergent nozzle.}
+        \caption{Steady-state solution for vapor phase flowing in a 1-D convergent-divergent nozzle.}
 				\label{fig:1d_vap_nozzle}
 \end{figure}
 %
-The steady-state solution of the density, Mach number and pressure are given in \fig{fig:1d_vap_nozzle}. The steady-solution exhibits a shock around $x=0.8m$ and matches the exact solution. In \fig{fig:1d_nozzle_vap_visc}, the first-order and entropy viscosity coefficients are plotted at steady-state (on a log scale): the entropy viscosity coefficient is peaked in the shock region around $x=0.8m$ as expected where it saturates to the first-order viscosity coefficient. The graph also presents another peak at $x=0.5m$  corresponding to the position of the sonic point for a 1-D convergent-divergent nozzle. This particular point is known to develop small instabilities that are detected when computing the jumps of the pressure and density gradients. Anywhere else, the entropy  viscosity coefficient is small. In order to prove convergence of the numerical solution to the exact solution, a convergence study is performed. Because of the presence of a shock, second-order accuracy is not expected and the convergence rate of a numerical solution should be $1$ and $1/2$ when measured in the L$_1$ and L$_2$ norms, respectively (see Theorem 9.3 in \cite{convergence_book}). Results are reported in \tbl{tbl:l1_norm_vap} and \tbl{tbl:l2_norm_vap} for the primitive variables: density, velocity and pressure. The convergence rates for the L$_1$ and L$_2$ norms of the error computed using \eqt{eq:conv_rates}, are in good agreement with the theoretical values.
+The steady-state solution of the density, Mach number and pressure are given in \fig{fig:1d_vap_nozzle}. The steady-solution exhibits a shock around $x=0.8m$ and matches the exact solution. In \fig{fig:1d_nozzle_vap_visc}, the first-order and entropy viscosity coefficients are plotted at steady-state (on a log scale): the entropy viscosity coefficient is peaked in the shock region around $x=0.8m$ as expected where it saturates to the first-order viscosity coefficient. The graph also presents another peak at $x=0.5m$  corresponding to the position of the sonic point for a 1-D convergent-divergent nozzle. This particular point is known to develop small instabilities that are detected when computing the jumps of the pressure and density gradients. Anywhere else, the entropy  viscosity coefficient is small. In order to prove convergence of the numerical solution to the exact solution, a convergence study is performed. Because of the presence of a shock, second-order accuracy is not expected and the convergence rate of a numerical solution should be 1 and $1/2$ when measured in the L$_1$ and L$_2$ norms, respectively (see Theorem 9.3 in \cite{convergence_book}). Results are reported in \tbl{tbl:l1_norm_vap} and \tbl{tbl:l2_norm_vap} for the primitive variables: density, velocity and pressure. The convergence rates for the L$_1$ and L$_2$ norms of the error computed using \eqt{eq:conv_rates} are in good agreement with the theoretical values.
 %
 \begin{table}[!htbp]
 \begin{center}
@@ -1158,8 +1133,9 @@ The computational domain consists of a 1-D straight pipe of length $L=9m$ with t
         \caption{Exact and Numerical solutions for the 1-D Leblanc shock tube at $t=4 s$.}\label{fig:1d_leblanc}
 \end{figure}
 %
-The density, momentum and total energy profiles are provided in \fig{fig:1d_leblanc}. In \fig{fig:1d_leblanc_density}, the shock region is zoomed in for better resolution: the shock is well resolved and do not present any oscillations. We also observed that the shock position computed numerically converges to the exact position under mesh refinement. The contact wave at $x=4.5m$ can be seen in \fig{fig:1d_leblanc_density}. The entropy viscosity coefficient profile is shown in \fig{fig:1d_leblanc_visc} and behaves as expected: it saturates to the first-order viscosity in the shock region, thus preventing oscillations from forming. At the location of the contact wave, a smaller peak is observed that is due to the presence of the jumps in the definition of the entropy viscosity coefficient (\eqt{eq:final_def_visc_coeff}).  The Mach number, not plotted, is of the order of $1.3$ right before the shock and reaches a maximum value close to $5$ in the contact region.\tcr{you said it was also subsonic. where?} \tcb{No it is not.}\\
-Once again, a convergence study is performed in order to prove convergence of the numerical solution to the exact solution. As in the previous example (the vapor phase in the 1-D nozzle, \sct{sec:steam_nozzle}), the expected convergence rates in the L$_1$ and L$_2$ norms are $1$ and $1/2$, respectively. The exact solution was obtained by running a 1-D Riemann solver and used as the reference solution to compute the L$_1$ and L$_2$-norms that are reported in \tbl{tbl:l1_norm_leblanc} and \tbl{tbl:l2_norm_leblanc} for the conservative variables: density, momentum and total energy. The convergence rates are approaching the theoretical values.
+The density, momentum and total energy profiles are provided in \fig{fig:1d_leblanc}. In \fig{fig:1d_leblanc_density}, the shock region is zoomed in for better resolution: the shock is well resolved. We also observe that the shock position computed numerically converges to the exact position under mesh refinement. The contact wave at $x=4.5m$ can be seen in \fig{fig:1d_leblanc_density}. The entropy viscosity coefficient profile is shown in \fig{fig:1d_leblanc_visc} and behaves as expected: it saturates to the first-order viscosity in the shock region, thus preventing oscillations from forming. At the location of the contact wave, a smaller peak is observed that is due to the presence of the jumps in the definition of the entropy viscosity coefficient (\eqt{eq:final_def_visc_coeff}).  The Mach number, not plotted, is of the order of $1.3$ right before the shock and reaches a maximum value close to $5$ in the contact region.
+
+Once again, a convergence study is performed in order to prove convergence of the numerical solution to the exact solution. As in the previous example (vapor phase in the 1-D nozzle, \sct{sec:steam_nozzle}), the expected convergence rates in the L$_1$ and L$_2$ norms are 1 and $1/2$, respectively. The exact solution was obtained by running a 1-D Riemann solver and used as the reference solution to compute the L$_1$ and L$_2$-norms that are reported in \tbl{tbl:l1_norm_leblanc} and \tbl{tbl:l2_norm_leblanc} for the conservative variables: density, momentum and total energy. The convergence rates are again approaching the theoretical values.
 
 \begin{table}[!htbp]
 \begin{center}
@@ -1204,7 +1180,7 @@ $6400$&$7.3309974$ $10^{-4}$    & $0.53343397$ & $4.4545754$ $10^{-4}$ & $0.4939
 %\tcr{until now, you never gave the mu and kappa coefficients, yet they are now different due to their different normalizations.
 %Maybe very little for the previous cases, but we need to mention something because, in this section, you show both, and it is better
 %to say something than to let the reviewers wonder ... } \tcb{what do you think of the following?}
-The purpose of this test is to investigate the ability of the entropy viscosity method to stabilize a strong shock with a small Mach number \cite{abgrall}: the Mach number in the shock region is of the order of $0.1$. In this case, as explained in \sct{sec:lowMach}, the viscosity coefficients are required to have different order of magnitude in order to ensure the correct scaling of the dissipative terms. This test will allow to validate our approach discussed in \sct{sec:lowMach}.  
+The purpose of this test is to investigate the ability of the entropy viscosity method to stabilize a strong shock with a small Mach number \cite{abgrall}: the Mach number in the shock region is of the order of 0.1. In this case, as explained in \sct{sec:lowMach}, the viscosity coefficients are required to have different order of magnitude in order to ensure the correct scaling of the dissipative terms. This test will allows us to validate the approach presented in \sct{sec:lowMach}.  
 
 The stiffened gas equation of state is used to model a liquid flow with the parameters given in \tbl{tbl:stff_gas_eos}. The computational domain of length $L=1m$ is uniformly discretized using 500 cells. The step initial conditions are given in \tbl{tbl:ic_1d_tests}.
 %
@@ -1235,12 +1211,12 @@ The simulation is run with a $CFL=1$ until the final time $t_{\text{final}} = 7 
 \subsection{1-D slow moving shock} \label{sec:slow_moving_shock}
 %---------------------------------------------------------------------------------------------------
 
-Slow moving shocks are known to produce post-shock noise of low frequency that are not damped by some numerical dissipation methods \cite{james}. The aim of this simulation is to test the ability of the entropy viscosity method of damping the low frequency waves.
-The 1-D slow moving shock consists of a shock wave moving from left to right with the initial conditions given in \tbl{tbl:ic_1d_tests}. The ideal gas equation of state is used with a heat capacity ratio, $\gamma$, of 1.4.  In order to make the shock travel a significant distance, the final time is taken equal to $t=1.1s$. A pressure boundary condition is used at the left boundary to let the rarefaction and contact waves exit the domain.   
+Slow moving shocks are known to produce post-shock noise of low frequency that are not damped by some numerical dissipation methods \cite{james}. The aim of this simulation is to test the ability of the entropy viscosity method to dampen the low frequency waves.
+The 1-D slow moving shock consists of a shock wave moving from left to right with the initial conditions given in \tbl{tbl:ic_1d_tests}. The ideal gas equation of state is used with a heat capacity ratio $\gamma=1.4$.  In order to make the shock travel a significant distance, the final time is taken equal to $t=1.1s$. A pressure boundary condition is used at the left boundary to let the rarefaction and contact waves exit the domain.   
 %
-The numerical solution, obtained with 200 equally-spaced cells, is given in \fig{fig:low_moving_shock} and is compared to the exact solution obtained from a Riemann solver. We use a $CFL$ of $1$. With this $CFL$ value, it takes about $50$ time steps for the shock to traverse one cell.
+The numerical solution, obtained with 200 equally-spaced cells, is given in \fig{fig:low_moving_shock} and is compared to the exact solution obtained from a Riemann solver. We use a $CFL$ of 1. With this $CFL$ value, it takes about 50 time steps for the shock to traverse one cell.
 %
-The numerical results are in good agreement with the exact solution and do not display any post-shock noise. The rarefaction and contact waves are not visible on \fig{fig:profiles_sms} since they exited the computational domain through the left pressure boundary condition earlier. As explained in \cite{roberts}, Godunov's type method usually fails to resolve a slow moving shock because of the nature of the stabilization method: the method scales as the eigenvalue of the appropriate field. In the case of a slow moving shock, the dissipation added to the system is under-estimated and leads to post-shock noise. In the case of the entropy viscosity method, the entropy residual detects the shock position and the viscosity coefficients saturate to the first-order viscosity values. The main difference between a  Godunov's type method and the entropy viscosity method relies in the definition of the first-order viscosity coefficients that are proportional to the \emph{local maximum eigenvalue} $||\vec{u}||+c$ and not to the eigenvalue of the characteristic field.
+The numerical results are in good agreement with the exact solution and do not display any post-shock noise. The rarefaction and contact waves are not visible on \fig{fig:profiles_sms} since they exited the computational domain through the left pressure boundary condition earlier. As explained in \cite{roberts}, Godunov's type method usually fails to resolve a slow moving shock because of the nature of the stabilization method: the method scales as the eigenvalue of the appropriate field. In the case of a slow moving shock, the dissipation added to the system is under-estimated and leads to post-shock noise. In the case of the entropy viscosity method, the entropy residual detects the shock position and the viscosity coefficients saturate to the first-order viscosity values in the shock region. The main difference between a  Godunov's type method and the entropy viscosity method relies in the definition of the first-order viscosity coefficients that are proportional to the \emph{local maximum eigenvalue} $||\vec{u}||+c$ and not to the eigenvalue of the characteristic field.
 %
 \begin{figure}[H]
         \centering
@@ -1268,7 +1244,7 @@ The numerical results are in good agreement with the exact solution and do not d
 Fluid flow over a 2-D cylinder is often used as a benchmark case to test numerical schemes in the low-Mach regime \cite{LowMach1, LowMach2, LowMach3}. For this test, an analytical solution is available in the incompressible limit or low-Mach limit and is often referred to as the potential flow solution. The main features of the potential flow are the following:
 %
 \begin{itemize}
-\item The solution is symmetric: the iso-Mach countour lines are used to asses the symmetry of the numerical solution;
+\item The solution is symmetric: the iso-Mach contour lines are used to asses the symmetry of the numerical solution;
 \item The velocity at the top of the cylinder is twice the incoming velocity set at the inlet;
 \item The pressure fluctuations are proportional to the square of inlet Mach number, i.e., 
 \begin{equation}
@@ -1290,9 +1266,9 @@ T_0 = T\left( 1 + \frac{\gamma-1}{2} M^2 \right)
 \right.
 \end{equation}
 %
-An static pressure boundary condition is used for the outlet boundary and the following static pressure $P_s = 101,325$ $Pa$ is set. The implementation of the pressure boundary conditions is done on the model of \cite{SEM}. A solid wall boundary condition is set for the top and bottom walls of the computational domain: the normal component of the velocity. The simulations are run until a steady state is reached with a $CFL$ of $40$. The steady state is considered reached when the norm of residual (for all equations) is less than $10^{-12}$.
+An static pressure boundary condition is used for the outlet boundary and the following static pressure $P_s = 101,325$ $Pa$ is set. The implementation of the pressure boundary conditions is based of \cite{SEM}. A solid wall boundary condition is set for the top and bottom walls of the computational domain. The simulations are run until a steady state is reached with a $CFL$ of $40$. The steady state is considered reached when the residual norm  (for all equations) is less than $10^{-12}$.
 
-Several simulations are performed, with inlet Mach numbers $M_{\text{inlet}}$ ranging from $10^{-3}$ to $10^{-7}$, and are shown in \fig{fig:cylinder}. The iso-Mach contour lines are drawn using $30$ equally-spaced intervals $2 \ 10^{-10}$ to $M_{\text{inlet}}$ and allow us to assess the symmetry of the numerical solution.
+Several simulations are performed, with inlet Mach numbers $M_{\text{inlet}}$ ranging from $10^{-3}$ to $10^{-7}$, and are shown in \fig{fig:cylinder}. The iso-Mach contour lines are drawn using 30 equally-spaced intervals $2 \ 10^{-10}$ to $M_{\text{inlet}}$ and allow us to assess the symmetry of the numerical solution.
 %
 \begin{figure}[H]
         \centering
@@ -1352,7 +1328,7 @@ $10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline
 \nonumber
 \end{table}
 %
-In \fig{fig:pressure_vel_fluc}, the fluctuations in pressure and velocity are plotted as a function of the Mach number (on a log-log scale). The fluctuations are expected to be of the order of $M^2$ and $M$ for the pressure and velocity, respectively. It is known that some stabilization methods, e.g., \cite{LowMach1, LowMach2, LowMach3}, can produce pressure fluctuations with the wrong Mach-number order. Here, entropy viscosity method yields the correct order in the low-Mach limit. For easy of comparison, the reference lines with slope values of 1 and 2 are also provided.
+In \fig{fig:pressure_vel_fluc}, the fluctuations in pressure and velocity are plotted as a function of the Mach number (on a log-log scale). The fluctuations are expected to be of the order of $M^2$ and $M$ for the pressure and velocity, respectively. It is known that some stabilization methods, e.g., \cite{LowMach1, LowMach2, LowMach3}, can produce pressure fluctuations with the wrong Mach-number order. Here, entropy viscosity method yields the correct order in the low-Mach limit. For ease of comparison, the reference lines with slope values of 1 and 2 are also plotted.
 %
 \begin{figure}[H]
 \centering
@@ -1368,7 +1344,7 @@ In \fig{fig:pressure_vel_fluc}, the fluctuations in pressure and velocity are pl
 \tcr{Is it a circular hump or Gaussian hump in the literature???} \tcb{circular hump}
 
 This is a another example of an internal flow configuration. It consists of a channel of height $L=1$ $m$ and length $3L$, with a circular bump of length $L$ and thickness $0.1L$. The bump is located on the bottom wall at a distance $L$ from the inlet. The system is initialized with an uniform pressure $P=101,325$ $Pa$ and temperature $T=300$ $K$. The initial velocity is computed from the inlet Mach number, the pressure, the temperature and the ideal gas equation (with  $\gamma=1.4$). Here,  $C_v = 717$ $J/kg-K$. At the inlet, a subsonic stagnation boundary condition is used and the stagnation pressure and temperature are computed using \eqt{eq:stagnation_relations}.
-The static pressure $P_s = 101,325$ $Pa$ is set at the subsonic outlet. The results are shown in \fig{fig:2d_hump_mach_0p7}, \fig{fig:2d_hump_mach_0p01}, \fig{fig:2d_hump_mach_0p0001} and \fig{fig:2d_hump_mach_0p0000001} for the inlet Mach numbers $M_{\infty}=0.7$, $M_{\infty}=0.01$, $M_{\infty}=10^{-4}$ and $M_{\infty}=10^{-7}$, respectively. It is expected that, within the low Mach number range, the solution does not depend on the Mach number and is identical to the solution obtained with an incompressible flow code. On the other hand, for a flow at $M=0.7$, the compressible effects become more important and shock can form. An uniform grid of $3352$ $Q_1$ elements was used to obtain the numerical solution for Mach numbers below $M_{\infty}=0.01$. A once-refined mesh was employed for the $M_{\infty}=0.7$ simulation in order to better resolve the shock. A $CFL$ of $20$ was employed and the simulations were run until steady state.
+The static pressure $P_s = 101,325$ $Pa$ is set at the subsonic outlet. The results are shown in \fig{fig:2d_hump_mach_0p7}, \fig{fig:2d_hump_mach_0p01}, \fig{fig:2d_hump_mach_0p0001} and \fig{fig:2d_hump_mach_0p0000001} for the inlet Mach numbers $M_{\infty}=0.7$, $M_{\infty}=0.01$, $M_{\infty}=10^{-4}$ and $M_{\infty}=10^{-7}$, respectively. It is expected that, within the low Mach number range, the solution does not depend on the Mach number and is identical to the solution obtained with an incompressible flow code. On the other hand, for a flow at $M=0.7$, the compressible effects become more important and shock can form. An uniform grid of $3352$ $Q_1$ elements was used to obtain the numerical solution for Mach numbers below $M_{\infty}=0.01$. A once-refined mesh was employed for the $M_{\infty}=0.7$ simulation in order to better resolve the shock. A $CFL$ of 20 was employed and the simulations were run until steady state.
 %
 \begin{figure}[H]
         \centering
@@ -1415,7 +1391,7 @@ The results presented in \fig{fig:2d_hump} were obtained with the new definition
 In this last example, we consider a supersonic flow at Mach 2.5 impinging on a corner with an angle of $15^\circ$. From the oblique shock theory \cite{CompressionCorner}, an analytical solution for this supersonic flow is available and give the downstream to upstream pressure, entropy and Mach number ratios. 
 The initial conditions are chosen to be spatially uniform: the pressure and temperature are set to $P=101,325$ $Pa$ and $T=300$ $K$, respectively.  The ideal gas equation of state is used with the same parameters as in \sct{sec:hump}. The initial velocity is computed from the upstream Mach number. The inlet is supersonic and therefore, the pressure, temperature and velocity are specified using Dirichlet boundary conditions. The outlet is also supersonic and none of the characteristics enter the domain through this boundary: the values will be computed by the implicit solver.
 
-The simulation is run with $CFL=2$, until steady state is reached. A 2-D mesh made of $16,109$ $\mathbb{Q}_1$ elements is used. The ratios for pressure, entropy and Mach number computed using the  analytical (with only two significant digits) and the numerical solutions are given in \tbl{tbl:corner_exact_sol}; they are in excellent agreement. The shock wave angle at steady state is also known and given by the so-called $\theta -\beta -M$ relation:
+The simulation is run with $CFL=2$, until steady state is reached. A 2-D mesh made of $16,109$ $\mathbb{Q}_1$ elements is used. The ratios for pressure, entropy and Mach number computed using the analytical (published with only two significant digits) and the numerical solutions are given in \tbl{tbl:corner_exact_sol}; they are in excellent agreement. The shock wave angle at steady state is also known and given by the so-called $\theta -\beta -M$ relation:
 %
 \begin{equation}
 \tan \theta = 2 \cot \beta \frac{M^2 \sin^2 \beta -1}{M^2 \left(\gamma+\cos^2 (2\beta)\right)+2} ,
@@ -1467,7 +1443,7 @@ Entropy     & 1.03       & 1.026    \\ \hline
         \caption{Steady-state solution for a flow in a 2-D compression corner.}\label{fig:2d_corner}
 \end{figure}
 %
-The steady-state numerical solution is given in \fig{fig:2d_corner}: the Mach number and the viscosity coefficients are plotted in \fig{fig:2d_corner_mach} and \fig{fig:2d_corner_visc}, respectively. The steady-state solution is formed of two regions of constant states, separated by the oblique shock. \fig{fig:2d_corner_visc} shows that the viscosity coefficient is large in the shock and small elsewhere, as expected. At the location of the corner ($x=-0.25m$, $y=-0.5m$), the viscosity coefficient is peaked because of the treatment of the wall boundary condition: at this particular node, the normal is not well defined and may cause some numerical errors. The 1-D graphs at $y=0$ for the pressure and the Mach number are given in \fig{fig:2d_corner_isomach}: no spurious oscillations are observed and the shock is well resolved. Finally, the difference between the inlet and outlet mass flow rates is plotted in \fig{fig:2d_convergence} which shows that the steady state is reached. 
+The steady-state numerical solution is given in \fig{fig:2d_corner}: the Mach number and the viscosity coefficients are plotted in \fig{fig:2d_corner_mach} and \fig{fig:2d_corner_visc}, respectively. The steady-state solution is formed of two regions of constant states, separated by the oblique shock. \fig{fig:2d_corner_visc} shows that the viscosity coefficient is large in the shock and small elsewhere, as expected. At the location of the corner ($x=-0.25m$, $y=-0.5m$), the viscosity coefficient is peaked because of the treatment of the wall boundary condition: at this particular node, the normal is not well defined and may cause some numerical errors. The 1-D graphs at $y=0$ for the pressure and the Mach number are given in \fig{fig:2d_corner_isomach}: no spurious oscillations are observed and the shock is well resolved. Finally, the difference between the inlet and outlet mass flow rates is plotted in \fig{fig:2d_convergence} which shows that a steady state has been reached. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
